--- a/DuAn01_G3_ebooks/src/com/ebooks/main/AuthorDiaLog.form
+++ b/DuAn01_G3_ebooks/src/com/ebooks/main/AuthorDiaLog.form
@@ -299,7 +299,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Inter Medium" size="14" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="H&#x1ecd; T&#xea;n Ng&#x1b0;&#x1edd;i D&#xf9;ng"/>
+            <Property name="text" type="java.lang.String" value="K&#xfd; Danh"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
