--- a/DuAn01_G3_ebooks/src/com/ebooks/main/AuthorDiaLog.form
+++ b/DuAn01_G3_ebooks/src/com/ebooks/main/AuthorDiaLog.form
@@ -186,6 +186,7 @@
             <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
               <ComponentRef name="buttonGroup1"/>
             </Property>
+            <Property name="selected" type="boolean" value="true"/>
             <Property name="text" type="java.lang.String" value="Nam"/>
           </Properties>
           <Events>
