--- a/DuAn01_G3_ebooks/src/com/ebooks/main/ReceiptDiaLog.form
+++ b/DuAn01_G3_ebooks/src/com/ebooks/main/ReceiptDiaLog.form
@@ -1075,6 +1075,7 @@
                   </Properties>
                   <Events>
                     <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="cboGioThueItemStateChanged"/>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cboGioThueActionPerformed"/>
                   </Events>
                   <AuxValues>
                     <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
